--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,16 @@ set -g default-terminal "screen-256color"
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
 
+# default window title colors
+# set-window-option -g window-status-attr dim
+
+# active window title colors
+# set-window-option -g window-status-current-attr bright
+
+# pane number display
+# set-option -g display-panes-active-colour colour33 #blue
+# set-option -g display-panes-colour colour166 #orange
+
 # clock
 set-window-option -g clock-mode-colour colour64 #green
 
@@ -14,10 +24,24 @@ unbind C-b
 set -g prefix ^Space
 bind a send-prefix
 
+# Bind appropriate commands similar to screen.
+# unbind ^X
+# bind ^X lock-server
+# unbind x
+# bind x lock-server
+
 # screen ^C c
 unbind ^C
 bind ^C new-window
 bind c new-window
+
+# detach ^D d
+# unbind ^D
+# bind ^D detach
+
+# displays *
+# unbind *
+# bind * list-clients
 
 # next ^@ ^N sp n
 unbind ^@
@@ -33,6 +57,40 @@ bind b last-window
 unbind A
 bind A command-prompt "rename-window %%"
 
+
+# prev ^H ^P p ^?
+# unbind BSpace
+# unbind ^H
+# unbind ^P
+# unbind p
+# bind p previous-window
+
+# windows ^W w
+# unbind ^W
+# bind ^W list-windows
+# unbind w
+# bind w list-windows
+
+# kill pane
+# unbind P
+# bind P confirm-before "kill-pane"
+
+# kill server
+# unbind Q
+# bind Q confirm-before "kill-server"
+
+# kill window
+# unbind K
+# bind K confirm-before "kill-window"
+# unbind W
+# bind W confirm-before "kill-window"
+
+# redisplay ^L l
+# unbind ^L
+# bind ^L refresh-client
+# unbind l
+# bind l refresh-client
+
 # More straight forward key bindings for splitting
 unbind %
 bind | split-window -h
@@ -40,6 +98,10 @@ bind S split-window
 
 # History
 set -g history-limit 50000
+
+# Terminal emulator window title
+# set -g set-titles on
+# set -g set-titles-string "#S:#I.#P #W"
 
 # Status Bar
 set -g status-interval 1
@@ -54,6 +116,10 @@ set -g visual-activity on
 
 # Clock
 setw -g clock-mode-style 24
+
+# " windowlist -b
+# unbind '"'
+# bind '"' choose-window
 
 # Pane movement
 unbind Tab
@@ -94,6 +160,28 @@ bind = resize-pane -Z
 set -ga terminal-overrides ',*:sitm@,ritm@'
 set -sg escape-time 0
 
-set-option -g mouse on
-bind-key -t vi-copy WheelUpPane scroll-up
-bind-key -t vi-copy WheelDownPane scroll-down
+# set-option -g mouse on
+# bind-key -t vi-copy WheelUpPane scroll-up
+# bind-key -t vi-copy WheelDownPane scroll-down
+
+# Double LMB Select & Copy (Word)
+# bind-key -T copy-mode-vi DoubleClick1Pane \
+#     select-pane \; \
+#     send-keys -X select-word \; \
+#     send-keys -X copy-pipe "xclip -in -sel primary"
+# bind-key -n DoubleClick1Pane \
+#     select-pane \; \
+#     copy-mode -M \; \
+#     send-keys -X select-word \; \
+#     send-keys -X copy-pipe "xclip -in -sel primary"
+
+# Triple LMB Select & Copy (Line)
+# bind-key -T copy-mode-vi TripleClick1Pane \
+#     select-pane \; \
+#     send-keys -X select-line \; \
+#     send-keys -X copy-pipe "xclip -in -sel primary"
+# bind-key -n TripleClick1Pane \
+#     select-pane \; \
+#     copy-mode -M \; \
+#     send-keys -X select-line \; \
+#     send-keys -X copy-pipe "xclip -in -sel primary"
